@@ -1,11 +1,11 @@
 {
   "timestamp" : "2022-04-02T01:02:33Z",
-  "count" : 2,
-  "count_minmax" : [ 1, 2 ],
+  "count" : 0,
+  "count_minmax" : [ 0, 0 ],
   "count_prev_day_inc" : 1,
   "count_prev_day_dec" : 0,
-  "uniques" : 2,
-  "uniques_minmax" : [ 1, 2 ],
+  "uniques" : 0,
+  "uniques_minmax" : [ 0, 0 ],
   "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
