@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-01T16:21:58Z",
-  "count_outdated" : 192,
-  "uniques_outdated" : 82,
-  "count" : 229,
-  "uniques" : 100,
+  "timestamp" : "2022-04-02T01:02:33Z",
+  "count_outdated" : 193,
+  "uniques_outdated" : 83,
+  "count" : 230,
+  "uniques" : 101,
   "views" : [
-    {
-      "timestamp": "2022-03-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-03-20T00:00:00Z",
       "count": 14,
@@ -70,10 +63,10 @@
     },
     {
       "timestamp": "2022-04-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
