@@ -3,11 +3,6 @@
   "uniques": 18,
   "views": [
     {
-      "timestamp": "2022-03-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-03-20T00:00:00Z",
       "count": 14,
       "uniques": 3
@@ -49,8 +44,8 @@
     },
     {
       "timestamp": "2022-04-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
